--- a/unveil_frontend/pubspec.yaml
+++ b/unveil_frontend/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   dio: ^5.7.0
   shared_preferences: ^2.3.2
+  image: ^4.3.0
+  file_picker: ^8.1.3
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
